[package]
name = "cyclonedx_bom_rust"
version = "7.2.2"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "cyclonedx_bom_rust"
crate-type = ["cdylib"]

[dependencies]
jsonschema = { version = "0.45", default-features = false }
once_cell = "1"
pyo3 = { version = "0.28.2", features = ["abi3-py39", "extension-module"] }
serde_json = "1"
